<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AddReminderDialog"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_reminder"
            android:textSize="20sp"
            android:textColor="#000"
            android:id="@+id/heading"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:textColor="#000"
            android:inputType="text"
            android:hint="@string/reminder_name"
            android:id="@+id/add_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_name"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:inputType="date"
            android:textColor="#000"
            android:hint="@string/edit_due_date"
            android:id="@+id/add_due_date"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_due_date"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:inputType="numberDecimal"
            android:textColor="#000"
            android:hint="@string/price"
            android:id="@+id/add_amount"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_cancel"/>

    </RelativeLayout>



</RelativeLayout>