<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/billParent"
    android:background="@color/orange_200"
    android:layout_margin="1dp"
    >

    <TextView
        android:id="@+id/billName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/bill_name"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textAlignment="center"
        android:layout_below="@+id/billName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/billDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textAlignment="center"
        android:layout_below="@+id/amount"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="24dp"
        android:layout_height="44dp"
        android:drawableBottom="@drawable/ic_delete"
        android:layout_below="@id/billDueDate"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/editBtn"
        android:layout_width="24dp"
        android:layout_height="44dp"
        android:drawableBottom="@drawable/ic_edit"
        android:layout_toEndOf="@id/deleteBtn"
        android:layout_below="@id/billDueDate"
        android:gravity="center"/>

</RelativeLayout>